--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-04-30  Eli Zaretskii  <eliz@gnu.org>
+
+	* mail/rmail.el (rmail-yank-current-message): Use the encoding of
+	the yanked message in preference to the default value of
+	buffer-file-coding-system.
+
 2012-04-30  Martin Rudalics  <rudalics@gmx.at>
 
 	* window.el (display-buffer--action-function-custom-type): Fix
