--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-01  Glenn Morris  <rgm@gnu.org>
+
+	* configure.in (LD_SWITCH_X_SITE_AUX): Remove; no longer used.
+
 2012-04-26  Glenn Morris  <rgm@gnu.org>
 
 	* make-dist: No more doc/lispref/tindex.pl.
