--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-01  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (LD_SWITCH_X_SITE_AUX): Remove; no longer used.
+
 2012-04-30  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* .gdbinit (xpr): Remove checks for no longer existing misc types.
