--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2012-05-01  Glenn Morris  <rgm@gnu.org>
 
+	* configure.in (LD_SWITCH_X_SITE_RPATH):
+	Rename from LD_SWITCH_X_SITE_AUX_RPATH.
+
 	* configure.in (LD_SWITCH_X_SITE_AUX): Remove; no longer used.
 
 2012-04-26  Glenn Morris  <rgm@gnu.org>
