Remove HAVE_LIBNCURSES; it is required to be true
Also, it was a confusing name, since it does not necessarily mean that
we literally have libncurses; rather that we have tputs etc.

* configure.in (HAVE_LIBNCURSES): Remove; it is required to be true.

* src/dispnew.c: Remove HAVE_LIBNCURSES test;
it is always true on relevant platforms.

* nt/config.nt (HAVE_LIBNCURSES): Remove undef; not needed.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2012-05-01  Glenn Morris  <rgm@gnu.org>
 
+	* configure.in (HAVE_LIBNCURSES): Remove; it is required to be true.
+
 	* configure.in (LD_SWITCH_X_SITE_RPATH):
 	Rename from LD_SWITCH_X_SITE_AUX_RPATH.
 
