--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2012-05-01  Glenn Morris  <rgm@gnu.org>
 
+	* configure.in: Invert the TERMINFO logic,
+	since "yes" is far more common than "no".
+
 	* configure.in (HAVE_LIBNCURSES): Remove; it is required to be true.
 
 	* configure.in (LD_SWITCH_X_SITE_RPATH):
