--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2012-05-01  Glenn Morris  <rgm@gnu.org>
 
+	* configure.in: Try libtinfo for tputs.
+	(LIBS_TERMCAP) [gnu*]: Use libtinfo if it was found.  (Bug#9741)
+
 	* configure.in: Combine adjacent $opsys case blocks.
 
 	* configure.in (LIBS_TERMCAP): Remove unreachable branch for sol2.
