--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,10 @@
 2012-05-01  Glenn Morris  <rgm@gnu.org>
 
+	* syssignal.h: Remove reference to BROKEN_SIGINFO (last used in
+	s/ptx4.h), BROKEN_SIGTSTP (last used in m/ustation.h, m/dpx2.h),
+	and BROKEN_SIGURG (was in s/gnu-linux.h prior to 2008-02-10).
+	All were removed before 23.1.
+
 	* dispnew.c: Remove HAVE_LIBNCURSES test;
 	it is always true on relevant platforms.
 
