Only print the edition number of the manuals in the TeX version
Frankly, I think the edition conveys little to no information.
The version number of Emacs is much more relevant.
No-one seems to know what the rules are for updating the edition anyway...

* doc/emacs/emacs.texi (@copying): Only print EDITION in the TeX version.

* doc/lispref/elisp.texi (@copying):
* doc/lispref/intro.texi (Introduction): Only print VERSION in the TeX version.

--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-01  Glenn Morris  <rgm@gnu.org>
+
+	* emacs.texi (@copying): Only print EDITION in the TeX version.
+
 2012-04-30  Glenn Morris  <rgm@gnu.org>
 
 	* search.texi (Regexp Search): Just say "Emacs".
