Fix some info/dir entries
* doc/misc/emacs-gnutls.texi, doc/misc/ert.texi, doc/misc/org.texi:
Fix dircategory, direntry to match info/dir.

* doc/misc/viper.texi: Make direntry shorter (also it is no longer "newest").

* info/dir: Make some entries consistent with the source texi files.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2012-05-02  Glenn Morris  <rgm@gnu.org>
 
+	* info/dir: Make some entries consistent with the source texi files.
+
 	* configure.in (LIBS_TERMCAP): Fix netbsd logic, broken 2012-03-04.
 
 2012-04-18  Ludovic Courtès  <ludo@gnu.org>
