--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2012-05-02  Glenn Morris  <rgm@gnu.org>
 
+	* Makefile.in (install-arch-indep, uninstall):
+	Ensure that INSTALL-type commands are run from top-level.
+
 	* Makefile.in (INFO_FILES): Add emacs-gnutls; accidentally
 	omitted from 2012-04-12 backport from trunk.
 
