Don't hard-code the list of info files in the top-level Makefile
The sed '/ing directory/d' piece is to remove the annoying
"entering/leaving directory" messages that GNU make insists on
printing when called recursively.  --no-print-directory isn't portable.

* Makefile.in (INFO_FILES): Remove variable.
(INFO_NONMISC): New variable.
(install-arch-indep, uninstall): Don't use $INFO_FILES.

* doc/misc/Makefile.in (echo-info): New phony target, used by top-level.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2012-05-02  Glenn Morris  <rgm@gnu.org>
 
+	* Makefile.in (INFO_FILES): Remove variable.
+	(INFO_NONMISC): New variable.
+	(install-arch-indep, uninstall): Don't use $INFO_FILES.
+
 	* Makefile.in (uninstall): Remove useless-use-of-for; that for
 	some reason caused problems on an old Solaris.
 
