--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,5 +1,7 @@
 2012-05-02  Glenn Morris  <rgm@gnu.org>
 
+	* Makefile.in (echo-info): New phony target, used by top-level.
+
 	* viper.texi: Make direntry shorter (also it is no longer "newest").
 
 	* emacs-gnutls.texi, ert.texi, org.texi:
