--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-02  Jim Meyering  <jim@meyering.net>
+
+	* xterm.c (x_term_init): Use memcpy instead of strncpy (Bug#11373).
+
 2012-05-02  Eli Zaretskii  <eliz@gnu.org>
 
 	* xdisp.c (pos_visible_p): If already at a newline from the
