Silence byte-compiler warnings.
lisp/notifications.el (dbus-debug):
lisp/term/linux.el (gpm-mouse-enable):
lisp/term/screen.el (xterm-register-default-colors): Declare.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-05-02  Juanma Barranquero  <lekktu@gmail.com>
+
+	* notifications.el (dbus-debug):
+	* term/linux.el (gpm-mouse-enable):
+	* term/screen.el (xterm-register-default-colors): Declare.
+
 2012-05-02  Chong Yidong  <cyd@gnu.org>
 
 	* allout.el (allout-exposure-change-functions)
