Add customization data to several built-in variables.
* lisp/cus-start.el (gc-cons-percentage, exec-suffixes)
(dos-display-scancodes, dos-hyper-key, dos-super-key)
(dos-keypad-mode, debug-on-signal, vertical-centering-font-regexp)
(make-cursor-line-fully-visible, void-text-area-pointer)
(font-list-limit): Add customization data.

* doc/lispref/display.texi (Font Lookup):
* doc/lispref/frames.texi (Pointer Shape):
* doc/lispref/processes.texi (Subprocess Creation): Use defopt for options.

--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,9 @@
+2012-05-02  Chong Yidong  <cyd@gnu.org>
+
+	* display.texi (Font Lookup):
+	* frames.texi (Pointer Shape):
+	* processes.texi (Subprocess Creation): Use defopt for options.
+
 2012-05-02  Glenn Morris  <rgm@gnu.org>
 
 	* elisp.texi (@copying):
