Backport Bug#11374 fix from trunk

--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,4 +1,7 @@
-2012-05-02  Jim Meyering  <meyering@redhat.com>
+2012-05-02  Jim Meyering  <jim@meyering.net>
+
+	* emacsclient.c (send_to_emacs): Avoid invalid strcpy upon partial
+	send (Bug#11374).
 
 	* lib-src/pop.c (pop_stat, pop_list, pop_multi_first, pop_last):
 	NUL-terminate the error buffer (Bug#11372).
