--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2012-05-02  Glenn Morris  <rgm@gnu.org>
 
+	* configure.in (LD_SWITCH_SYSTEM): Don't try to defeat
+	the choices made by FreeBSD and NetBSD.  (Bug#10313)
+
 	* Makefile.in (INFO_FILES): Remove variable.
 	(INFO_NONMISC): New variable.
 	(install-arch-indep, uninstall): Don't use $INFO_FILES.
