--- a/etc/NEWS
+++ b/etc/NEWS
@@ -32,6 +32,11 @@ may be useful.
 ---
 ** Emacs uses libtinfo in preference to libncurses, if available.
 
+---
+** On FreeBSD and NetBSD, configure no longer adds /usr/local/lib and
+/usr/pkg/lib to the linker search path.  You must add them yourself if
+you want them.
+
 
 * Startup Changes in Emacs 24.2
 
