--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-02  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* subr.el (read-passwd): Better clean after ourselves (bug#11392).
+
 2012-05-02  Juanma Barranquero  <lekktu@gmail.com>
 
 	* notifications.el (dbus-debug):
