--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-03  Glenn Morris  <rgm@gnu.org>
+
+	* fixit.texi (Fixit, Undo): Reword to improve page-breaks.
+
 2012-05-01  Glenn Morris  <rgm@gnu.org>
 
 	* emacs.texi (@copying): Only print EDITION in the TeX version.
